@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.1591 2004/04/09 00:06:19 wiz Exp $
+$NetBSD: TODO,v 1.1592 2004/04/09 12:47:07 wiz Exp $
 
 Suggested new packages
 ======================
@@ -348,7 +348,6 @@ Suggested package updates
 	o xalan-c-1.7 [requires xerces-c-2.4.0]
 	o xanim-2.92.0 [pkg/19934]
 	o xboard-4.2.7
-	o xchm-0.9.1
 	o xdaliclock-2.20
 	o xerces-c-2.5.0 [heinz?|p5-XML-Xerces requires xerces-c-2.3.0]
 	o xerces-j-2.4.0 [pkg/21725]
